NCI-Agency/anet#1268 Fix mosaic layout for daily rollup Layout fits the screen as much as possible without a scrollbar

--- a/client/src/components/MosaicLayout.css
+++ b/client/src/components/MosaicLayout.css
@@ -21,7 +21,7 @@
   display: flex;
   flex-direction: column;
   flex: 1 1 auto;
-  min-height: 80vh;
+  min-height: 400px;
 }
 
 .mosaic-container .scrollable {
